<resources>
    <string name="app_name">Kitty Message 7</string>

    <!-- radio button labels / output strings -->
    <string name="cat_purr">Purr</string>
    <string name="cat_mew">Mew</string>
    <string name="cat_hiss">Hiss</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <string name="select_message">Select a message</string>
    <string name="message_label">Message</string>
    <string name="undefined">Undefined</string>

    <!-- the button labels -->
    <string name="send">Send</string>
    <string name="back">Back</string>

    <!-- the activity labels -->
    <string name="input_activity">Input Activity</string>
    <string name="output_activity">Output Activity</string>

    <!-- the floating label -->
    <string name="sheridan">Sheridan, 2020</string>
    <string name="delivery_label">Delivery</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="received_envelope">Received Envelope</string>
    <string name="outgoing_envelope">Outgoing Envelope</string>

</resources>