<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="ca.tetervak.kittymessage7.model.Envelope" />
        <variable
            name="envelope"
            type="Envelope" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_200"
        tools:context=".OutputActivity">

        <TextView
            android:id="@+id/output_activity_label"
            style="@style/activity_label"
            android:text="@string/output_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/received_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toTopOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center_horizontal"
                        android:text="@string/received_envelope"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/teal_700"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin">

                    <TextView
                        style="@style/output_label"
                        android:text="@string/message_label" />

                    <TextView
                        android:id="@+id/message_output"
                        style="@style/output_value"
                        app:message="@{envelope.catMessage}"
                        tools:text="@string/cat_mew" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/small_margin">

                    <TextView
                        style="@style/output_label"
                        android:text="@string/delivery_label" />

                    <TextView
                        android:id="@+id/delivery_output"
                        style="@style/output_value"
                        app:delivery="@{envelope.urgent}"
                        tools:text="@string/urgent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/small_margin">

                    <TextView
                        style="@style/output_label"
                        android:text="@string/date_label" />

                    <TextView
                        android:id="@+id/date_output"
                        style="@style/output_value"
                        app:date="@{envelope.timeStamp}"
                        tools:text="Oct 11, 2020" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/small_margin">

                    <TextView
                        style="@style/output_label"
                        android:text="@string/time_label" />

                    <TextView
                        android:id="@+id/time_output"
                        style="@style/output_value"
                        app:time="@{envelope.timeStamp}"
                        tools:text="5:25:36 PM" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/received_card" />

        <TextView
            android:id="@+id/sheridan"
            style="@style/sheridan_label"
            android:text="@string/sheridan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>