<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="ca.tetervak.kittymessage7.model.Envelope" />
        <variable
            name="envelope"
            type="Envelope" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_50"
        tools:context=".InputActivity">

        <TextView
            android:id="@+id/input_activity_label"
            style="@style/activity_label"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/input_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/outgoing_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toTopOf="@id/send_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center_horizontal"
                        android:text="@string/outgoing_envelope"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/teal_700"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin">

                    <TextView
                        style="@style/input_label"
                        android:text="@string/message_label" />

                    <Spinner
                        android:id="@+id/message_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:entries="@array/cat_messages"
                        app:message="@={envelope.catMessage}"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/input_label"
                        android:text="@string/delivery_label" />

                    <CheckBox
                        android:id="@+id/delivery_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:checked="@={envelope.urgent}"
                        android:text="@string/urgent"/>
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginTop="@dimen/double_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outgoing_card" />

        <TextView
            android:id="@+id/sheridan"
            style="@style/sheridan_label"
            android:text="@string/sheridan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>